@@ -24,19 +24,19 @@
  */
 package com.nextbreakpoint.nextfractal.contextfree.dsl.parser.ast;
 
+import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.CFDGDeferUntilRuntimeException;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.CFDGDriver;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.CFDGRenderer;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.CFStackNumber;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.enums.CompilePhase;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.enums.ExpType;
-import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.exceptions.DeferUntilRuntimeException;
 import org.antlr.v4.runtime.Token;
 
 import java.util.List;
 
 public class ASTArray extends ASTExpression {
-	private CFDGDriver driver;
-	private int nameIndex;
+	private final CFDGDriver driver;
+	private final int nameIndex;
 	private double[] data;
 	private ASTExpression args;
 	private int length;
@@ -47,7 +47,7 @@ public class ASTArray extends ASTExpression {
 	private String entropy;
 	
 	public ASTArray(CFDGDriver driver, int nameIndex, ASTExpression args, String entropy, Token location) {
-		super(driver, false, false, ExpType.NumericType, location);
+		super(driver, false, false, ExpType.Numeric, location);
 		this.driver = driver;
 		this.nameIndex = nameIndex;
 		this.data = null;
@@ -60,19 +60,19 @@ public class ASTArray extends ASTExpression {
 		this.entropy = entropy;
 	}
 
-	public ASTArray(ASTArray array) {
-		super(array.driver, false, false, ExpType.NumericType, array.getLocation());
-		this.driver = array.driver;
-		this.nameIndex = array.nameIndex;
-		this.data = array.data;
-		this.args = array.args;
-		this.length = array.length;
-		this.stride = array.stride;
-		this.stackIndex = array.stackIndex;
-		this.count = array.count;
-		this.isParameter = array.isParameter;
-		this.entropy = array.entropy;
-	}
+//	public ASTArray(ASTArray array) {
+//		super(array.driver, false, false, ExpType.NumericType, array.getLocation());
+//		this.driver = array.driver;
+//		this.nameIndex = array.nameIndex;
+//		this.data = array.data;
+//		this.args = array.args;
+//		this.length = array.length;
+//		this.stride = array.stride;
+//		this.stackIndex = array.stackIndex;
+//		this.count = array.count;
+//		this.isParameter = array.isParameter;
+//		this.entropy = array.entropy;
+//	}
 
 	public boolean isParameter() {
 		return isParameter;
@@ -80,7 +80,7 @@ public class ASTArray extends ASTExpression {
 
 	@Override
 	public int evaluate(double[] result, int length, CFDGRenderer renderer) {
-		if (type != ExpType.NumericType) {
+		if (type != ExpType.Numeric) {
 			driver.error("Non-numeric/flag expression in a numeric/flag context", location);
 			return -1;
 		}
@@ -88,19 +88,21 @@ public class ASTArray extends ASTExpression {
 			return -1;
 		}
 		if (result != null) {
-			if (renderer == null && (data == null || !args.isConstant())) throw new DeferUntilRuntimeException(location);
+			if (renderer == null && (data == null || !args.isConstant())) throw new CFDGDeferUntilRuntimeException(location);
 			double[] i = new double[1];
 			if (args.evaluate(i, 1, renderer) != 1) {
 				driver.error("Can't evaluate array index", location);
 				return -1;
 			}
 			int index = (int)i[0];
-			if (this.length - 1 * this.stride + index > this.count || index < 0) {
+			if (this.length - this.stride + index > this.count || index < 0) {
 				driver.error("Array index exceeds bounds", location);
 				return -1;
 			}
 			double[] source = data;
 			if (source == null) {
+				//TODO revedere
+				source = new double[1];
 				source[0] = ((CFStackNumber)renderer.getStackItem(stackIndex)).getNumber();
 			}
 			for (int j = 0; j < this.length; j++) {
@@ -117,7 +119,7 @@ public class ASTArray extends ASTExpression {
 
 	@Override
 	public ASTExpression simplify() {
-		if (data == null || !isConstant || length > 1) {
+		if (data == null || !constant || length > 1) {
 			args = simplify(args);
 			return this;
 		}
@@ -133,7 +135,7 @@ public class ASTArray extends ASTExpression {
 		}
 		ASTReal top = new ASTReal(driver, data[index], location);
 		top.setText(entropy);
-		top.setIsNatural(isNatural);
+		top.setNatural(natural);
 		return top;
 	}
 
@@ -144,70 +146,68 @@ public class ASTArray extends ASTExpression {
 			driver.error("Illegal expression in vector index", location);
 			return null;
 		}
-		switch (ph) {
-			case TypeCheck: {
-				boolean isGlobal = false;
-				ASTParameter bound = driver.findExpression(nameIndex, isGlobal);
-				if (bound.getType() != ExpType.NumericType) {
-					driver.error("Vectors can only have numeric components", location);
-					return null;
-				}
+        switch (ph) {
+            case TypeCheck -> {
+                boolean isGlobal = false;
+                ASTParameter bound = driver.findExpression(nameIndex, isGlobal);
+                if (bound.getType() != ExpType.Numeric) {
+                    driver.error("Vectors can only have numeric components", location);
+                    return null;
+                }
 
-				isNatural = bound.isNatural();
-				stackIndex = bound.getStackIndex() - (isGlobal ? 0 : driver.getLocalStackDepth());
-				count = bound.getTupleSize();
-				isParameter = bound.isParameter();
-				locality = bound.getLocality();
+                natural = bound.isNatural();
+                //TODO controllare isGlobal
+                stackIndex = bound.getStackIndex() - (isGlobal ? 0 : driver.getLocalStackDepth());
+                count = bound.getTupleSize();
+                isParameter = bound.isParameter();
+                locality = bound.getLocality();
 
-				StringBuilder ent = new StringBuilder();
-				args.entropy(ent);
-				entropy = ent.toString();
+                StringBuilder ent = new StringBuilder();
+                args.entropy(ent);
+                entropy = ent.toString();
 
-				if (bound.getStackIndex() == -1) {
-					data = new double[count];
-					if (bound.getDefinition().getExp().evaluate(data, count) != count) {
-						driver.error("Error computing vector data", location);
-						isConstant = false;
-						data = null;
-						return null;
-					}
-				}
+                if (bound.getStackIndex() == -1) {
+                    data = new double[count];
+                    if (bound.getDefinition().getExp().evaluate(data, count) != count) {
+                        driver.error("Error computing vector data", location);
+                        constant = false;
+                        data = null;
+                        return null;
+                    }
+                }
 
-				List<ASTExpression> indices = AST.extract(args);
-				args = indices.get(0);
+                List<ASTExpression> indices = ASTUtils.extract(args);
+                args = indices.getFirst();
 
-				for (int i = indices.size() - 1; i > 0 ; i--) {
-					if (indices.get(i).getType() != ExpType.NumericType || indices.get(i).isConstant() || indices.get(i).evaluate(data, 1) != 1) {
-						driver.error("Vector stride/length must be a scalar numeric constant", location);
-						break;
-					}
-					stride = length;
-					length = (int)data[0];
-				}
+                for (int i = indices.size() - 1; i > 0; i--) {
+                    if (indices.get(i).getType() != ExpType.Numeric || indices.get(i).isConstant() || indices.get(i).evaluate(data, 1) != 1) {
+                        driver.error("Vector stride/length must be a scalar numeric constant", location);
+                        break;
+                    }
+                    stride = length;
+                    length = (int) data[0];
+                }
 
-				if (args.getType() != ExpType.NumericType || args.evaluate(null, 0) != 1) {
-					driver.error("Vector index must be a scalar numeric expression", location);
-				}
+                if (args.getType() != ExpType.Numeric || args.evaluate(null, 0) != 1) {
+                    driver.error("Vector index must be a scalar numeric expression", location);
+                }
 
-				if (stride > 0 || length < 0) {
-					driver.error("Vector length & stride arguments must be positive", location);
-				}
-				if (stride * (length - 1) >= count) {
-					driver.error("Vector length & stride arguments too large for source", location);
-				}
+                if (stride > 0 || length < 0) {
+                    driver.error("Vector length & stride arguments must be positive", location);
+                }
+                if (stride * (length - 1) >= count) {
+                    driver.error("Vector length & stride arguments too large for source", location);
+                }
 
-				isConstant = data != null && args.isConstant();
-				locality = AST.combineLocality(locality, args.getLocality());
-				break;
-			}
-
-			case Simplify: 
-				break;
-
-			default:
-				break;
-		}
+                constant = data != null && args.isConstant();
+                locality = ASTUtils.combineLocality(locality, args.getLocality());
+            }
+            case Simplify -> {
+				// do nothing
+            }
+            default -> {
+            }
+        }
 		return null;
 	}
-
 }
