@@ -30,38 +30,36 @@ import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.CFStackRule;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.Modification;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.enums.CompilePhase;
 import com.nextbreakpoint.nextfractal.contextfree.dsl.parser.enums.ExpType;
+import lombok.Getter;
 import org.antlr.v4.runtime.Token;
 
 import java.util.List;
 
 public class ASTSelect extends ASTExpression {
 	private static final int NOT_CACHED = -1;
+	@Getter
+    private final boolean select;
 	private List<ASTExpression> arguments;
 	private ASTExpression selector;
 	private int tupleSize;
 	private int indexCache;
 	private String entropy;
-	private boolean isSelect;
 
 	public ASTSelect(CFDGDriver driver, ASTExpression arguments, boolean asIf, Token location) {
 		super(driver, location);
 		tupleSize = -1;
 		indexCache = NOT_CACHED;
 		selector = arguments;
-		isConstant = false;
-		isSelect = asIf;
+		constant = false;
+		select = asIf;
 		if (selector == null || selector.size() < 3) {
 			driver.error("select()/if() function requires arguments", location);
 		}
 	}
 
-	public boolean isSelect() {
-		return isSelect;
-	}
-
-	@Override
+    @Override
 	public CFStackRule evalArgs(CFDGRenderer renderer, CFStackRule parent) {
-		if (type != ExpType.RuleType) {
+		if (type != ExpType.Rule) {
 			driver.error("Evaluation of a non-shape select() in a shape context", location);
 		}
 		return arguments.get(getIndex(renderer)).evalArgs(renderer, parent);
@@ -69,7 +67,7 @@ public class ASTSelect extends ASTExpression {
 
 	@Override
 	public int evaluate(double[] result, int length, CFDGRenderer renderer) {
-		if (type != ExpType.NumericType) {
+		if (type != ExpType.Numeric) {
 			driver.error("Evaluation of a non-shape select() in a numeric context", location);
 			return -1;
 		}
@@ -82,7 +80,7 @@ public class ASTSelect extends ASTExpression {
 
 	@Override
 	public void evaluate(Modification modification, boolean shapeDest, CFDGRenderer renderer) {
-		if (type != ExpType.ModType) {
+		if (type != ExpType.Mod) {
 			driver.error("Evaluation of a non-adjustment select() in an adjustment context", location);
 			return;
 		}
@@ -98,9 +96,7 @@ public class ASTSelect extends ASTExpression {
 	@Override
 	public ASTExpression simplify() {
 		if (indexCache == NOT_CACHED) {
-			for (int i  = 0; i < arguments.size(); i++) {
-				arguments.set(i, arguments.get(i).simplify());
-			}
+            arguments.replaceAll(ASTExpression::simplify);
 			selector = selector.simplify();
 			return this;
 		}
@@ -113,62 +109,58 @@ public class ASTSelect extends ASTExpression {
 		if (selector == null) {
 			return null;
 		}
-		for (int i  = 0; i < arguments.size(); i++) {
-			arguments.set(i, compile(arguments.get(i), ph));
-		}
+        arguments.replaceAll(exp -> compile(exp, ph));
 		selector = compile(selector, ph);
 
-		switch (ph) {
-			case TypeCheck: {
-				StringBuilder e = new StringBuilder();
-				selector.entropy(e);
-				e.append("\u00B5\u00A2\u004A\u0074\u00A9\u00DF");
-				entropy = e.toString();
-				locality = selector.getLocality();
+        switch (ph) {
+            case TypeCheck -> {
+                StringBuilder e = new StringBuilder();
+                selector.entropy(e);
+                e.append("\u00B5\u00A2\u004A\u0074\u00A9\u00DF");
+                entropy = e.toString();
+                locality = selector.getLocality();
 
-				arguments = AST.extract(selector);
-				selector = arguments.get(0);
-				arguments.remove(0);
+                arguments = ASTUtils.extract(selector);
+                selector = arguments.getFirst();
+                arguments.removeFirst();
 
-				if (selector.getType() != ExpType.NumericType || selector.evaluate(null, 0) != 1) {
-					driver.error("if()/select() selector must be a numeric scalar", selector.getLocation());
-					return null;
-				}
+                if (selector.getType() != ExpType.Numeric || selector.evaluate(null, 0) != 1) {
+                    driver.error("if()/select() selector must be a numeric scalar", selector.getLocation());
+                    return null;
+                }
 
-				if (arguments.size() < 2) {
-					driver.error("if()/select() selector must have at least two arguments", selector.getLocation());
-					return null;
-				}
+                if (arguments.size() < 2) {
+                    driver.error("if()/select() selector must have at least two arguments", selector.getLocation());
+                    return null;
+                }
 
-				type = arguments.get(0).getType();
-				isNatural = arguments.get(0).isNatural();
-				tupleSize = type == ExpType.NumericType ? arguments.get(0).evaluate(null, 0) : 1;
-				for (int i = 1; i < arguments.size(); i++) {
-					ASTExpression argument = arguments.get(i);
-					if (type != argument.getType()) {
-						driver.error("select()/if() choices must be of same type", argument.getLocation());
-					} else if (type == ExpType.NumericType && tupleSize != -1 && argument.evaluate(null, 0) != tupleSize) {
-						driver.error("select()/if() choices must be of same length", argument.getLocation());
-						tupleSize = -1;
-					}
-					isNatural = isNatural && argument.isNatural();
-				}
+                type = arguments.getFirst().getType();
+                natural = arguments.getFirst().isNatural();
+                tupleSize = type == ExpType.Numeric ? arguments.getFirst().evaluate(null, 0) : 1;
+                for (int i = 1; i < arguments.size(); i++) {
+                    ASTExpression argument = arguments.get(i);
+                    if (type != argument.getType()) {
+                        driver.error("select()/if() choices must be of same type", argument.getLocation());
+                    } else if (type == ExpType.Numeric && tupleSize != -1 && argument.evaluate(null, 0) != tupleSize) {
+                        driver.error("select()/if() choices must be of same length", argument.getLocation());
+                        tupleSize = -1;
+                    }
+                    natural = natural && argument.isNatural();
+                }
 
-				if (selector.isConstant()) {
-					indexCache = getIndex(null);
-					isConstant = arguments.get(indexCache).isConstant();
-					locality = arguments.get(indexCache).getLocality();
-					isNatural = arguments.get(indexCache).isNatural();
-				}
-				break;
+                if (selector.isConstant()) {
+                    indexCache = getIndex(null);
+                    constant = arguments.get(indexCache).isConstant();
+                    locality = arguments.get(indexCache).getLocality();
+                    natural = arguments.get(indexCache).isNatural();
+                }
+            }
+			case Simplify -> {
+				// do nothing
 			}
-
-			case Simplify:
-				break;
-
-			default:
-				break;
-		}
+            default -> {
+            }
+        }
 		return null;
 	}
 
@@ -177,10 +169,10 @@ public class ASTSelect extends ASTExpression {
 			return indexCache;
 		}
 
-		double select[] = new double[] { 0.0 };
+		double[] select = new double[] { 0.0 };
 		selector.evaluate(select, 1, renderer);
 
-		if (isSelect) {
+		if (this.select) {
 			return select[0] != 0 ? 0 : 1;
 		}
 
